client: Work around Edge layout bug so editor iframes are properly sized

--- a/client/src/project/index.styl
+++ b/client/src/project/index.styl
@@ -214,6 +214,7 @@ body
     iframe
       border none
       flex 1
-
-      &:not(.active)
-        display none
+      // NOTE: Workaround for Microsoft Edge
+      // (iframes seem to ignore flex: 1)
+      min-height 100%
+      &:not(.active) { display: none; }
